Fix: vertical scroll offset when clicking #anchors on mobile

--- a/frontend/global-styles.css
+++ b/frontend/global-styles.css
@@ -5,24 +5,40 @@
 
 /* TechNotes color: 5ecbf5 */
 
-html, body {
-    /* Disable overscroll because the sudden appearance of white around the page doesn't look good */
-    @apply overscroll-none;
+@layer utilities {
+    @variants responsive {
+        /* scroll padding is important for when user clicks on #anchor links so they don't disappear behind fixed headers */
+        .scroll-padding-none {
+            scroll-padding-top: 0;
+        }
+        .scroll-padding-45 {
+            scroll-padding-top: 45px;
+        }
+    }
 }
 
-/* Typography: apply this class to a section that contains prose, to ensure headings have reasonable size/weight, paragraphs are spaced, etc. */
-.neo-typography h1,
-.neo-typography h2,
-.neo-typography h3,
-.neo-typography h4,
-.neo-typography h5,
-.neo-typography h6  {
-    @apply font-semibold mt-3;
+@layer base {
+
+    html, body {
+        /* Disable overscroll because the sudden appearance of white around the page doesn't look good */
+        @apply overscroll-none;
+    }
+
+    /* Typography: apply this class to a section that contains prose, to ensure headings have reasonable size/weight, paragraphs are spaced, etc. */
+    .neo-typography h1,
+    .neo-typography h2,
+    .neo-typography h3,
+    .neo-typography h4,
+    .neo-typography h5,
+    .neo-typography h6  {
+        @apply font-semibold mt-3;
+    }
+    .neo-typography h1 { @apply text-4xl; }
+    .neo-typography h2 { @apply text-3xl; }
+    .neo-typography h3 { @apply text-2xl; }
+    .neo-typography h4 { @apply text-xl; }
+    .neo-typography h5 { @apply text-lg; }
+    .neo-typography p { font-weight: 450; @apply my-1; }
+    .neo-typography a { @apply underline; }
+
 }
-.neo-typography h1 { @apply text-4xl; }
-.neo-typography h2 { @apply text-3xl; }
-.neo-typography h3 { @apply text-2xl; }
-.neo-typography h4 { @apply text-xl; }
-.neo-typography h5 { @apply text-lg; }
-.neo-typography p { font-weight: 450; @apply my-1; }
-.neo-typography a { @apply underline; }
